fixed the submission functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
         <label for="pages">Pages:</label>
         <input type="text" id="pages" name="pages">
+
+        <button class="submit">Submit</button>
     </div>
 
     <div class="shelf">
