added remove button for each book

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="pages">Pages:</label>
             <input type="text" id="pages" name="pages">
     
-            <button value="cancel" formmethod="dialog">Cancel</button>
+            <button type="button" id="cancelButton">Cancel</button>
             <button id="confirmBtn" value="default">Confirm</button>
 
         </form>
