created toggle button for reading status in the dialog

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     
             <label for="pages">Pages:</label>
             <input type="text" id="pages" name="pages">
+
+            <label for="read">Read?</label>
+            <input type="checkbox" id="read" name="read">
     
             <button type="button" id="cancelButton">Cancel</button>
             <button id="confirmBtn" value="default">Confirm</button>
