--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-    <button class="newBook">NEW BOOK</button>
+    <div class="header">
+        <h1 class="heading">My Library</h1>
+        <button class="newBook">NEW BOOK</button>
+    </div>
 
     <dialog class="inputBook">
         <form>
