--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div class="header">
         <h1 class="heading">My Library</h1>
+        <img src="book.png" alt="Book">
         <button class="newBook">NEW BOOK</button>
     </div>
 
